{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 40,
  "lineage": "5c647868-f974-1f47-e260-4b441dc678ff",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:loadbalancer/app/moveo-load-balancer/fc841dd31276f1b2",
            "arn_suffix": "app/moveo-load-balancer/fc841dd31276f1b2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "moveo-load-balancer-720387332.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:loadbalancer/app/moveo-load-balancer/fc841dd31276f1b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "moveo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a78558894d00c746"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045722ff5152b8ab5"
              },
              {
                "subnet_id": "subnet-0958ab33ed87db374"
              }
            ],
            "subnets": [
              "subnet-045722ff5152b8ab5",
              "subnet-0958ab33ed87db374"
            ],
            "vpc_id": "vpc-03df96f6ebae98360",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_subnet.PbSubnet_2",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:listener/app/moveo-load-balancer/fc841dd31276f1b2/6260ccd9d3c694a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:targetgroup/tg/af5e0dbe049a42ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:listener/app/moveo-load-balancer/fc841dd31276f1b2/6260ccd9d3c694a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:loadbalancer/app/moveo-load-balancer/fc841dd31276f1b2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_subnet.PbSubnet_2",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:targetgroup/tg/af5e0dbe049a42ba",
            "arn_suffix": "targetgroup/tg/af5e0dbe049a42ba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:targetgroup/tg/af5e0dbe049a42ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:767397887878:loadbalancer/app/moveo-load-balancer/fc841dd31276f1b2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "dependencies": [
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:targetgroup/tg/af5e0dbe049a42ba-20240821121035689500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:767397887878:targetgroup/tg/af5e0dbe049a42ba",
            "target_id": "i-025af2faddef28283"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.moveo_instance",
            "module.ec2.aws_key_pair.moveo_key_pair",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.PrSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e49d62cf88738f1",
            "arn": "arn:aws:ec2:eu-west-1:767397887878:instance/i-088669a7393d2ae45",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088669a7393d2ae45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e3b9cb1dbd8d325",
            "private_dns": "ip-10-0-1-112.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.112",
            "public_ip": "34.245.170.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ccd46eabb86f65e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045722ff5152b8ab5",
            "tags": {
              "Name": "bastion-instance"
            },
            "tags_all": {
              "Name": "bastion-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a78558894d00c746"
            ]
          },
          "dependencies": [
            "module.bastion.aws_key_pair.bastion_key_pair",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "moveo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e49d62cf88738f1",
            "arn": "arn:aws:ec2:eu-west-1:767397887878:instance/i-025af2faddef28283",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025af2faddef28283",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "moveo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01dc5fb4051692f88",
            "private_dns": "ip-10-0-2-29.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.29",
            "public_ip": "3.252.73.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-092c864f01502c6e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0850132d4c76432fc",
            "tags": {
              "Name": "moveo-task-instance-1"
            },
            "tags_all": {
              "Name": "moveo-task-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a78558894d00c746"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.moveo_key_pair",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.PrSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:security-group/sg-0a78558894d00c746",
            "description": "Allow HTTP, SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a78558894d00c746",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "moveo-sg",
            "name_prefix": "",
            "owner_id": "767397887878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-sg"
            },
            "tags_all": {
              "Name": "task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051c497f8d117cb89",
            "arn": "arn:aws:ec2:eu-west-1:767397887878:elastic-ip/eipalloc-051c497f8d117cb89",
            "association_id": "eipassoc-05a10d41a548bc0a9",
            "domain": "vpc",
            "id": "eipalloc-051c497f8d117cb89",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0866d08b680a7b785",
            "private_dns": "ip-10-0-1-198.eu-west-1.compute.internal",
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-176-34-199-81.eu-west-1.compute.amazonaws.com",
            "public_ip": "176.34.199.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:internet-gateway/igw-0eb5c1a1f13b09a91",
            "id": "igw-0eb5c1a1f13b09a91",
            "owner_id": "767397887878",
            "tags": {
              "Name": "moveo-igw"
            },
            "tags_all": {
              "Name": "moveo-igw"
            },
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "dependencies": [
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051c497f8d117cb89",
            "association_id": "eipassoc-05a10d41a548bc0a9",
            "connectivity_type": "public",
            "id": "nat-07dc03b0cdfbad132",
            "network_interface_id": "eni-0866d08b680a7b785",
            "private_ip": "10.0.1.198",
            "public_ip": "176.34.199.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045722ff5152b8ab5",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:route-table/rtb-0866c8f43139f943b",
            "id": "rtb-0866c8f43139f943b",
            "owner_id": "767397887878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07dc03b0cdfbad132",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moveo-private-route_table"
            },
            "tags_all": {
              "Name": "moveo-private-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:route-table/rtb-0782345c0754bab69",
            "id": "rtb-0782345c0754bab69",
            "owner_id": "767397887878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb5c1a1f13b09a91",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moveo-public-route_table"
            },
            "tags_all": {
              "Name": "moveo-public-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032b1f817d0f9bda5",
            "route_table_id": "rtb-0866c8f43139f943b",
            "subnet_id": "subnet-0850132d4c76432fc"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_subnet.PrSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0415786ec5ebb82f1",
            "route_table_id": "rtb-0782345c0754bab69",
            "subnet_id": "subnet-045722ff5152b8ab5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.PbSubnet",
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PbSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:subnet/subnet-045722ff5152b8ab5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045722ff5152b8ab5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "moveo-public-subnet"
            },
            "tags_all": {
              "Name": "moveo-public-subnet"
            },
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "dependencies": [
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PbSubnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:subnet/subnet-0958ab33ed87db374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958ab33ed87db374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "moveo-public-subnet-lb"
            },
            "tags_all": {
              "Name": "moveo-public-subnet-lb"
            },
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "dependencies": [
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:subnet/subnet-0850132d4c76432fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0850132d4c76432fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "moveo-private-subnet"
            },
            "tags_all": {
              "Name": "moveo-private-subnet"
            },
            "vpc_id": "vpc-03df96f6ebae98360"
          },
          "dependencies": [
            "module.vpc.aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397887878:vpc/vpc-03df96f6ebae98360",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07df549afe87fb711",
            "default_route_table_id": "rtb-0a8ec8474bb9af8e4",
            "default_security_group_id": "sg-0cecf159490f76e8a",
            "dhcp_options_id": "dopt-02a9539ea0f8d92b5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03df96f6ebae98360",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8ec8474bb9af8e4",
            "owner_id": "767397887878",
            "tags": {
              "Name": "Moveo-VPC"
            },
            "tags_all": {
              "Name": "Moveo-VPC"
            }
          }
        }
      ]
    }
  ]
}